<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activities.MainActivity">
    <item
        android:id="@+id/select_habits"
        android:title="@string/select_habits"
        android:visible="false"
        android:orderInCategory="80"
        app:showAsAction="never"/>
    <item
        android:id="@+id/add_habit"
        android:title="@string/add_habit"
        android:orderInCategory="96"
        app:showAsAction="never"/>
    <item
        android:id="@+id/graphDisplay"
        android:title="@string/statistics"
        android:orderInCategory="97"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/motivations"
        android:title="@string/motivational_tips"
        android:orderInCategory="98"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/achievements"
        android:title="@string/achievements"
        android:orderInCategory="99"
        android:visible="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/manage_habit"
        android:title="@string/manage"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        android:orderInCategory="101"
        app:showAsAction="never"/>
</menu>