<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/habits_bottom_menu"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/charts_bottom_menu"
        android:enabled="true"
        android:icon="@drawable/ic_equalizer_white_24dp"
        android:title="@string/text_schedules"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/savings_bottom_menu"
        android:enabled="true"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:title="@string/text_music"
        app:showAsAction="ifRoom" />
</menu>