<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="@dimen/activity_horizontal_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_habit_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/addHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_habit_name_hint"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_habit_goal_per_day_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_habit_goal_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_habit_goal_per_day_hint"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_habit_goal_date_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_habit_goal_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/add_habit_goal_date_hint"
            android:inputType="date"/>
        
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_habit_price_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_habit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_habit_price_hint"
            android:inputType="numberDecimal"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/add_habit_curr_per_day_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/add_habit_curr_per_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_habit_curr_per_day_hint"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/add_habit_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:checked="true"
        android:hint="@string/add_habit_tips_hint"
        android:textSize="18sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_habit_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_habit_button"
            android:visibility="gone"/>

        <Button
            android:id="@+id/add_habit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_habit_button"/>
    </LinearLayout>

</LinearLayout>