
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@color/blue"
    android:padding="@dimen/widget_margin"
    android:id="@+id/widget">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/widget_habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:text="@string/app_widget_title"
            android:lines="2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/widget_view"
                android:contentDescription="@string/widget_view_desc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/habit_icon_padding"
                android:layout_weight="1"
                android:src="@drawable/ic_star"
                android:tint="@color/white"/>

            <TextView
                android:id="@+id/widget_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lines="1"
                android:gravity="center"
                android:text="@string/widget_count"
                android:textColor="@color/white"
                android:textSize="64sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>